# rust_projects

./: .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
cmake/: CargoBuild.cmake
cminesweeper/: CMakeLists.txt  Cargo.toml
cminesweeper/src/: lib.rs
libminesweeper/: Cargo.toml
libminesweeper/src/: lib.rs
minesweeper/: CMakeLists.txt  Cargo.toml  TODO.md  classes.drawio  classes.xml
minesweeper/src/: lib.rs  main.rs
minesweeper/src/gui/: main_window.rs
minesweeper/src/logic/: field.rs  game.rs  mod.rs  table.rs
minesweeper/src/minesweeper/: field_type.rs  mod.rs  results.rs
minesweeper/src/minesweeper_logic/: basic_types.rs  field_info.rs  field_type.rs  game.rs  mod.rs  results.rs  table.rs
monty-hall/: CMakeLists.txt  Cargo.toml  README.md
monty-hall/src/: main.rs
monty_hall/: CMakeLists.txt  Cargo.toml  README.md
