[package]
name = "minesweeper_c_api"
version = "0.1.0"
authors = ["János Benjamin Antal <antal.janos.benjamin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minesweeper = { version = "^0", path = "../minesweeper" }
libc = "0.2"

[lib]
name = "minesweeper"
crate-type = ["cdylib"]