[package]
name = "minesweeper"
version = "0.1.0"
authors = ["János Benjamin Antal <antal.janos.benjamin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
indexmap = "1.0.2"
hrsw = "0.1.0"
orbtk = "0.2.29"
orbimage = "0.1.17"
orbclient = "0.3.17"