[package]
name = "minesweeper"
version = "0.1.0"
authors = ["János Benjamin Antal <antal.janos.benjamin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
indexmap = "1.0.2"
hrsw = "0.1.0"
strum = "0.18.0"
strum_macros = "0.18.0"
lazy_static = "1.4.0"
mockall = "0.9.0"

[lib]
name = "minesweeper"

[[bin]]
name = "minesweeper_demo"
path = "src/main.rs"